# FashionBack

./: alembic.ini  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 2024_08_20_2134-ef61e41b5c3b_.py  2024_08_26_1312-862b5cb8c3da_.py  2024_08_28_2019-a9d0404e410c_.py
src/: __init__.py
src/advertisements/: __init__.py  model.py  router.py  schema.py  service.py
src/base/: __init__.py  base_crud_service.py  base_session.py
src/base_classes/: __init__.py
src/bookings/: __init__.py  model.py
src/categories/: __init__.py  model.py  router.py  schema.py  service.py
src/config/: settings.py
src/notifications/: model.py  schema.py  service.py
src/payments/: __init__.py  model.py
src/reviews/: model.py
src/salons/: __init__.py  model.py  router.py  schema.py  service.py
src/services/: __init__.py  model.py  router.py  schema.py  service.py
src/statistics/: model.py
src/subscriptions/: __init__.py  model.py
src/users/: __init__.py  model.py  router.py  schema.py  service.py
